--- a/src/app/home/bmi-result/bmi-result.component.html
+++ b/src/app/home/bmi-result/bmi-result.component.html
@@ -171,7 +171,7 @@
     >
       Previous
     </button>
-    <span>Children Profile Page {{ currentPage }}</span>
+    <span>BMI Result Page {{ currentPage }}</span>
     <button
       class="paginationButton"
       (click)="goToPage(currentPage + 1)"
