--- a/src/app/home/bmi-result/bmi-result.component.css
+++ b/src/app/home/bmi-result/bmi-result.component.css
@@ -135,32 +135,21 @@ legend {
 }
 
 .pagination {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   margin-top: 10px;
-  font-size: 20px;
-  margin: 0 10px;
-  font-weight: bold;
-  padding: 8px 16px;
-  color: #000000;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 0 5px;
 }
 
 .paginationButton {
-  padding: 8px 16px;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 15px;
   margin: 0 5px;
-  background-color: #4caf50;
+  padding: 5px 10px;
+  border: 1px solid #333;
+  background-color: #f2f2f2;
+  color: #333;
+  cursor: pointer;
 }
 
-.pagination button:hover {
-  background-color: #138a17;
+.paginationButton[disabled] {
+  background-color: #ccc;
+  color: #888;
+  cursor: not-allowed;
 }
