--- a/src/app/home/dashboard/dashboard.component.css
+++ b/src/app/home/dashboard/dashboard.component.css
@@ -1,21 +1,27 @@
-#barGraph {
-  max-width: 600px; /* Adjust the width as needed */
-  margin-left: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  font-size: 5px;
-  margin-top: 20px;
+.chart-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
 }
 
-#lineGraph {
-  max-width: 800px; /* Adjust the width as needed */
-  margin-left: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  font-size: 5px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  height: 400px;
+.chart-container {
+  max-width: 100%;
+  border: 1px solid #ddd;
+  margin: 5px; /* Add equal margin to all sides */
+  padding: 10px; /* Add padding to create space inside the container */
+}
+
+.chart-container1 {
+  max-width: 100%;
+  border: 1px solid #ddd;
+  margin: 5px; /* Add equal margin to all sides */
+  padding: 10px; /* Add padding to create space inside the container */
+}
+
+canvas {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  background-color: #ccc;
 }
