--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,3 +1,17 @@
-<canvas id="barGraph" width="500" height="100"></canvas>
+<div class="chart-grid">
+  <div class="chart-container">
+    <canvas id="barGraph"></canvas>
+  </div>
 
-<canvas id="lineGraph" width="500" height="100"></canvas>
+  <div class="chart-container1">
+    <canvas id="lineGraph"></canvas>
+  </div>
+
+  <div class="chart-container">
+    <canvas id="lineGraphWeightHeight"></canvas>
+  </div>
+
+  <div class="chart-container1">
+    <canvas id="lineGraphHeight"></canvas>
+  </div>
+</div>
