--- a/src/app/home/nutritional-status/nutritional-status.component.html
+++ b/src/app/home/nutritional-status/nutritional-status.component.html
@@ -335,6 +335,26 @@
           [(ngModel)]="nutritionalData.date"
         />
       </div>
+      <div>
+        <label for="measurementMonth">Measurement Month:</label>
+        <select
+          id="measurementMonth"
+          name="measurementMonth"
+          [(ngModel)]="nutritionalData.measurementMonth"
+        >
+          <option value="January">January</option>
+          <option value="February">February</option>
+          <option value="March">March</option>
+          <option value="May">May</option>
+          <option value="June">June</option>
+          <option value="July">July</option>
+          <option value="August">August</option>
+          <option value="September">September</option>
+          <option value="October">October</option>
+          <option value="November">November</option>
+          <option value="December">December</option>
+        </select>
+      </div>
       <button type="submit">Submit</button>
     </form>
   </fieldset>
