--- a/src/app/shared/nutritional-dropdown/nutritional-dropdown.component.html
+++ b/src/app/shared/nutritional-dropdown/nutritional-dropdown.component.html
@@ -1,22 +1,26 @@
-<div class="dropdown">
-  <button class="dropdown-button">
-    Nutritional Status Summary<i class="fa fa-table"></i>
+<div class="dropdown" [ngClass]="{ open: isDropdownOpen }">
+  <button class="dropdown-button" (click)="toggleDropdown()">
+    <i class="fa fa-table"></i>Nutritional Status
+    <i class="fa fa-arrow-down"></i>Summary
   </button>
   <div class="dropdown-content">
-    <li>
-      <a routerLink="/home/nutritionalsummary"
-        ><i class="fa fa-bar-chart"></i> WeightForAge Nutritional Summary</a
-      >
-    </li>
-    <li>
-      <a routerLink="/home/nutritionalsummaryheight"
-        ><i class="fa fa-bar-chart"></i> HeightForAge Nutritional Summary</a
-      >
-    </li>
-    <li>
-      <a routerLink="/home/nutritionalsummaryweight"
-        ><i class="fa fa-bar-chart"></i> WeightForHeight Nutritional Summary</a
-      >
-    </li>
+    <ul>
+      <li>
+        <a routerLink="/home/nutritionalsummary"
+          ><i class="fa fa-bar-chart"></i> WeightForAge Nutritional Summary</a
+        >
+      </li>
+      <li>
+        <a routerLink="/home/nutritionalsummaryheight"
+          ><i class="fa fa-bar-chart"></i> HeightForAge Nutritional Summary</a
+        >
+      </li>
+      <li>
+        <a routerLink="/home/nutritionalsummaryweight"
+          ><i class="fa fa-bar-chart"></i> WeightForHeight Nutritional
+          Summary</a
+        >
+      </li>
+    </ul>
   </div>
 </div>
