--- a/src/app/home/bmi-result/bmi-result.component.css
+++ b/src/app/home/bmi-result/bmi-result.component.css
@@ -69,16 +69,6 @@ legend {
   background-color: #e0e0e0;
 }
 
-#barGraph {
-  max-width: 600px; /* Adjust the width as needed */
-  margin: 0 auto; /* Horizontally center the canvas */
-  display: block; /* Ensure it takes full available width */
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  font-size: 5px;
-}
-
 .fieldset1 {
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -97,7 +87,7 @@ legend {
 .filter-container label {
   flex: 2;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #79AC78;
   border-radius: 4px;
   padding: 5px 10px;
   margin-bottom: 2px;
@@ -119,7 +109,7 @@ legend {
 
 .filter-container button {
   flex: 1;
-  background-color: #4caf50;
+  background-color: #79AC78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -131,7 +121,7 @@ legend {
 }
 
 .filter-container button:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
 
 .pagination {
