--- a/src/app/home/family-profile/family-profile.component.css
+++ b/src/app/home/family-profile/family-profile.component.css
@@ -24,7 +24,7 @@ body {
 }
 
 .navigation-buttons button {
-  background-color: #4caf50;
+  background-color: #79AC78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -33,7 +33,7 @@ body {
 }
 
 .navigation-buttons button:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
 
 form {
@@ -70,11 +70,11 @@ input:hover,
 input:focus,
 select:hover,
 select:focus {
-  border-color: #4caf50;
+  border-color: #B0D9B1;
 }
 
 button[type="submit"] {
-  background-color: #4caf50;
+  background-color: #79AC78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -84,7 +84,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
 
 fieldset {
