--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: linear-gradient(to right, #27d89d, #52e0b0);
+  background-image: linear-gradient(to right, #b0d9b1, #d0e7d2);
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.8;
@@ -20,7 +20,7 @@ body {
 }
 
 .navbar {
-  background-color: #f9062c;
+  background-color: #618264;
   color: #fff;
   padding: 10px;
   display: flex;
