--- a/src/app/home/nutritional-status/nutritional-status.component.css
+++ b/src/app/home/nutritional-status/nutritional-status.component.css
@@ -19,7 +19,7 @@
 }
 
 .navigation-buttons button {
-  background-color: #4caf50;
+  background-color: #79AC78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -28,7 +28,7 @@
 }
 
 .navigation-buttons button:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
 
 form {
@@ -65,12 +65,12 @@ input:hover,
 input:focus,
 select:hover,
 select:focus {
-  border-color: #4caf50;
+  border-color: #b0d9b1;
 }
 
 /* Style submit button */
 button[type="submit"] {
-  background-color: #4caf50;
+  background-color: #79AC78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -81,7 +81,7 @@ button[type="submit"] {
 
 /* Style submit button on hover */
 button[type="submit"]:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
 
 .fieldset1 {
