--- a/src/app/home/nutritional-table/nutritional-table.component.html
+++ b/src/app/home/nutritional-table/nutritional-table.component.html
@@ -190,15 +190,34 @@
             required
           />
         </div>
+        <div>
+          <label for="measurementMonth">Measurement Month:</label>
+          <select
+            id="measurementMonth"
+            name="measurementMonth"
+            [(ngModel)]="nutritionalRecordsData.measurementMonth"
+          >
+            <option value="January">January</option>
+            <option value="February">February</option>
+            <option value="March">March</option>
+            <option value="May">May</option>
+            <option value="June">June</option>
+            <option value="July">July</option>
+            <option value="August">August</option>
+            <option value="September">September</option>
+            <option value="October">October</option>
+            <option value="November">November</option>
+            <option value="December">December</option>
+          </select>
+        </div>
+        <button class="close" (click)="closeUpdateNutritionalModal()">
+          Cancel
+        </button>
+  
+        <button class="btn btn-primary" (click)="updateNutritional()">
+          Update Child
+        </button>
       </form>
-
-      <button class="close" (click)="closeUpdateNutritionalModal()">
-        Cancel
-      </button>
-
-      <button class="btn btn-primary" (click)="updateNutritional()">
-        Update Child
-      </button>
     </div>
   </div>
 </div>
@@ -332,6 +351,7 @@
                 <th>Iron Drops / Syrup Received</th>
                 <th>Using MNP</th>
                 <th>Date</th>
+                <th>Measurement Month</th>
                 <th>Action</th>
               </tr>
             </thead>
@@ -364,6 +384,7 @@
                 <td>{{ record.ironReceived }}</td>
                 <td>{{ record.usingMNP }}</td>
                 <td>{{ record.date }}</td>
+                <td>{{ record.measurementMonth }}</td>
                 <td>
                   <a class="btn btn-sm btn-outline-dark"
                     ><i class="fas fa-up-right-from-square"></i
