--- a/src/app/home/profile-table/profile-table.component.css
+++ b/src/app/home/profile-table/profile-table.component.css
@@ -1,7 +1,5 @@
 #updateCon {
-  background-color: white;
   border-radius: 10px;
-  border: 2px solid #ccc;
   padding: 5px;
   position: absolute;
   justify-content: center;
@@ -12,6 +10,9 @@
   left: 50%;
   top: 100%;
   transform: translate(-50%, -50%);
+
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
 }
 
 input[type="text"],
@@ -137,7 +138,7 @@ legend {
 .filter-container label {
   flex: 2;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #79AC78;
   border-radius: 4px;
   padding: 5px 10px;
   margin-bottom: 2px;
@@ -159,7 +160,7 @@ legend {
 
 .filter-container button {
   flex: 1;
-  background-color: #4caf50;
+  background-color: #79AC78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -171,7 +172,7 @@ legend {
 }
 
 .filter-container button:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
 
 .pagination {
@@ -198,9 +199,9 @@ legend {
   cursor: pointer;
   font-size: 15px;
   margin: 0 5px;
-  background-color: #4caf50;
+  background-color: #79AC78;
 }
 
 .pagination button:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
