--- a/src/app/home/quarterly-table/quarterly-table.component.css
+++ b/src/app/home/quarterly-table/quarterly-table.component.css
@@ -137,7 +137,7 @@ legend {
 .filter-container label {
   flex: 2;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #79AC78;
   border-radius: 4px;
   padding: 5px 10px;
   margin-bottom: 2px;
@@ -159,7 +159,7 @@ legend {
 
 .filter-container button {
   flex: 1;
-  background-color: #4caf50;
+  background-color: #79AC78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -171,7 +171,7 @@ legend {
 }
 
 .filter-container button:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
 
 .pagination {
@@ -198,9 +198,9 @@ legend {
   cursor: pointer;
   font-size: 15px;
   margin: 0 5px;
-  background-color: #4caf50;
+  background-color: #79AC78;
 }
 
 .pagination button:hover {
-  background-color: #138a17;
+  background-color: #B0D9B1;
 }
