--- a/src/app/home/user-account/user-account.component.css
+++ b/src/app/home/user-account/user-account.component.css
@@ -38,12 +38,12 @@ input:hover,
 input:focus,
 select:hover,
 select:focus {
-  border-color: #4caf50;
+  border-color: #79ac78;
 }
 
 /* Style submit button */
 button[type="submit"] {
-  background-color: #4caf50;
+  background-color: #79ac78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -54,7 +54,7 @@ button[type="submit"] {
 
 /* Style submit button on hover */
 button[type="submit"]:hover {
-  background-color: #138a17;
+  background-color: #b0d9b1;
 }
 
 .fieldset1 {
