--- a/src/app/home/userlist/userlist.component.css
+++ b/src/app/home/userlist/userlist.component.css
@@ -6,7 +6,7 @@ table {
 }
 
 thead {
-  background-color: #138a17;
+  background-color: #79ac78;
   color: #fff;
 }
 
@@ -24,7 +24,7 @@ td {
 }
 
 button {
-  background-color: #138a17;
+  background-color: #79ac78;
   color: #fff;
   padding: 5px 10px;
   border: none;
@@ -34,7 +34,7 @@ button {
 }
 
 button:hover {
-  background-color: #4caf50;
+  background-color: #b0d9b1;
 }
 
 .fieldset1 {
@@ -110,7 +110,7 @@ label {
 .button-container button {
   margin-right: 10px;
   padding: 8px 16px;
-  background-color: #138a17;
+  background-color: #79ac78;
   color: #fff;
   border: none;
   border-radius: 3px;
@@ -118,5 +118,5 @@ label {
 }
 
 .button-container button:hover {
-  background-color: #4caf50;
+  background-color: #b0d9b1;
 }
