--- a/src/app/shared/nutritional-dropdown/nutritional-dropdown.component.css
+++ b/src/app/shared/nutritional-dropdown/nutritional-dropdown.component.css
@@ -1,11 +1,10 @@
-/* dropdown.component.css */
 .dropdown {
   position: relative;
-  z-index: 1;
+  display: inline-block;
 }
 
 .dropdown-button {
-  background-color: #f9062c;
+  background-color: #618264;
   color: #fff;
   border: none;
   padding: 10px 5px;
@@ -21,6 +20,12 @@
   z-index: 1;
 }
 
+.dropdown-content ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 .dropdown-content a {
   color: #333;
   padding: 12px 16px;
@@ -32,6 +37,6 @@
   background-color: #f2f2f2;
 }
 
-.dropdown:hover .dropdown-content {
+.open .dropdown-content {
   display: block;
 }
