--- a/src/app/shared/profile-dropdown/profile-dropdown.component.html
+++ b/src/app/shared/profile-dropdown/profile-dropdown.component.html
@@ -1,12 +1,18 @@
-<div class="dropdown">
-    <button class="dropdown-button"><i class="fa fa-table"></i> Profile Records <i class="fa fa-arrow-down"></i> Result Table </button>
-    <div class="dropdown-content">
-      <li>
-        <a routerLink="/home/profiletable"><i class="fa fa-table"></i> Children Profile Table</a>
-      </li>
-      <li>
-        <a routerLink="/home/familyprofiletable"><i class="fa fa-table"></i> Family Profile Table</a>
-      </li>
-    </div>
+<div class="dropdown" [ngClass]="{ open: isDropdownOpen }">
+  <button class="dropdown-button" (click)="toggleDropdown()">
+    <i class="fa fa-table"></i>Profile Records
+    <i class="fa fa-arrow-down"></i>Result Table
+  </button>
+  <div class="dropdown-content">
+    <li>
+      <a routerLink="/home/profiletable"
+        ><i class="fa fa-table"></i> Children Profile Table</a
+      >
+    </li>
+    <li>
+      <a routerLink="/home/familyprofiletable"
+        ><i class="fa fa-table"></i> Family Profile Table</a
+      >
+    </li>
   </div>
-  
+</div>
