--- a/src/app/home/bmi-result/bmi-result.component.html
+++ b/src/app/home/bmi-result/bmi-result.component.html
@@ -112,6 +112,7 @@
               <tr>
                 <th>Child ID</th>
                 <th>Child's Name</th>
+                <th>Month</th>
                 <th>Barangay</th>
                 <th>Weight (kg)</th>
                 <th>Height (cm)</th>
@@ -141,6 +142,7 @@
                       result.childName?.lastName
                   }}
                 </td>
+                <td>{{ result.measurementMonth }}</td>
                 <td>{{ result.barangay }}</td>
                 <td>{{ result.weight }}</td>
                 <td>{{ result.height }}</td>
