--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -7,11 +7,17 @@
     <canvas id="lineGraph"></canvas>
   </div>
 
-  <div class="chart-container">
-    <canvas id="lineGraphWeightHeight"></canvas>
-  </div>
-
-  <div class="chart-container1">
-    <canvas id="lineGraphHeight"></canvas>
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Number of Girls and Boys in San Juan, Batangas</h5>
+      <div class="cardbody">
+        <p class="card-text">
+          <i class="fa fa-female"></i> Girls: {{ girlsCount }}
+        </p>
+        <p class="card-text">
+          <i class="fa fa-male"></i> Boys: {{ boysCount }}
+        </p>
+      </div>
+    </div>
   </div>
 </div>
