--- a/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.html
+++ b/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.html
@@ -2,6 +2,24 @@
   <fieldset id="bmiranking">
     <legend><h3>BMI BARANGAY RANKING TABLE</h3></legend>
     <div class="ranking-table">
+      <label for="monthSelect">Select Month:</label>
+      <select
+        id="monthSelect"
+        [(ngModel)]="selectedMonth"
+        (change)="onMonthSelect()"
+      >
+        <option value="January">January</option>
+        <option value="February">February</option>
+        <option value="March">March</option>
+        <option value="May">May</option>
+        <option value="June">June</option>
+        <option value="July">July</option>
+        <option value="August">August</option>
+        <option value="September">September</option>
+        <option value="October">October</option>
+        <option value="November">November</option>
+        <option value="December">December</option>
+      </select>
       <table>
         <thead>
           <tr>
