--- a/src/app/home/nutritional-status-summary-weightforheight/nutritional-status-summary-weightforheight.component.html
+++ b/src/app/home/nutritional-status-summary-weightforheight/nutritional-status-summary-weightforheight.component.html
@@ -2,6 +2,24 @@
   <fieldset id="bmiranking">
     <section class="barangay-nutritional-status">
       <h2>Barangay WeightForHeight Nutritional Status</h2>
+      <label for="monthSelect">Select Month:</label>
+      <select
+        id="monthSelect"
+        [(ngModel)]="selectedMonth"
+        (change)="onMonthSelect()"
+      >
+        <option value="January">January</option>
+        <option value="February">February</option>
+        <option value="March">March</option>
+        <option value="May">May</option>
+        <option value="June">June</option>
+        <option value="July">July</option>
+        <option value="August">August</option>
+        <option value="September">September</option>
+        <option value="October">October</option>
+        <option value="November">November</option>
+        <option value="December">December</option>
+      </select>
       <table class="nutritional-status-table">
         <thead>
           <tr>
