--- a/src/app/home/nutritional-status-summary/nutritional-status-summary.component.html
+++ b/src/app/home/nutritional-status-summary/nutritional-status-summary.component.html
@@ -2,6 +2,24 @@
   <fieldset id="bmiranking">
     <section class="barangay-nutritional-status">
       <h2>Barangay WeightForAge Nutritional Status</h2>
+      <label for="monthSelect">Select Month:</label>
+      <select
+        id="monthSelect"
+        [(ngModel)]="selectedMonth"
+        (change)="onMonthSelect()"
+      >
+        <option value="January">January</option>
+        <option value="February">February</option>
+        <option value="March">March</option>
+        <option value="May">May</option>
+        <option value="June">June</option>
+        <option value="July">July</option>
+        <option value="August">August</option>
+        <option value="September">September</option>
+        <option value="October">October</option>
+        <option value="November">November</option>
+        <option value="December">December</option>
+      </select>
       <table class="nutritional-status-table">
         <thead>
           <tr>
@@ -24,9 +42,4 @@
       </table>
     </section>
   </fieldset>
-</div>
-<div class="container">
-  <div class="chart-container">
-    <canvas id="lineGraph"></canvas>
-  </div>
 </div>
