--- a/src/app/home/profile-table/profile-table.component.css
+++ b/src/app/home/profile-table/profile-table.component.css
@@ -138,7 +138,7 @@ legend {
 .filter-container label {
   flex: 2;
   text-align: center;
-  background-color: #79AC78;
+  background-color: #79ac78;
   border-radius: 4px;
   padding: 5px 10px;
   margin-bottom: 2px;
@@ -160,7 +160,7 @@ legend {
 
 .filter-container button {
   flex: 1;
-  background-color: #79AC78;
+  background-color: #79ac78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -172,7 +172,7 @@ legend {
 }
 
 .filter-container button:hover {
-  background-color: #B0D9B1;
+  background-color: #b0d9b1;
 }
 
 .pagination {
@@ -199,9 +199,31 @@ legend {
   cursor: pointer;
   font-size: 15px;
   margin: 0 5px;
-  background-color: #79AC78;
+  background-color: #79ac78;
 }
 
 .pagination button:hover {
-  background-color: #B0D9B1;
+  background-color: #b0d9b1;
+}
+
+.custom-card {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.custom-card-body {
+  padding: 20px;
+}
+
+.custom-card-title {
+  font-size: 1.25rem;
+  color: #333;
+}
+
+.custom-card-text {
+  font-size: 1rem;
+  color: #666;
 }
