--- a/src/app/home/children-info/children-info.component.html
+++ b/src/app/home/children-info/children-info.component.html
@@ -49,6 +49,7 @@
           id="birthday"
           name="birthday"
           [(ngModel)]="childData.birthday"
+          (ngModelChange)="onBirthdayChange()"
           required
         />
       </div>
