--- a/src/app/home/family-profile-table/family-profile-table.component.html
+++ b/src/app/home/family-profile-table/family-profile-table.component.html
@@ -6,7 +6,7 @@
 <div id="updateCon">
   <div id="updateFamilyModal" #updateFamilyModal class="modal">
     <div class="modal-content">
-      <form (ngSubmit)="updateFamily()">
+      <form>
         <legend class="legend1">Family Profile</legend>
         <div>
           <label for="houseHoldMember">No. of Household Members:</label>
