--- a/src/app/home/monthly-records-infant/monthly-records-infant.component.html
+++ b/src/app/home/monthly-records-infant/monthly-records-infant.component.html
@@ -6,7 +6,7 @@
 <div id="updateCon">
   <div id="updateMonthlyInfantModal" #updateMonthlyInfantModal class="modal">
     <div class="modal-content">
-      <form (ngSubmit)="updateMonthlyInfant()">
+      <form>
         <legend class="legend1">
           Monthly Records of Weight and Weight Status Infants 0-23 Months
         </legend>
