--- a/src/app/home/nutritional-table/nutritional-table.component.html
+++ b/src/app/home/nutritional-table/nutritional-table.component.html
@@ -6,7 +6,7 @@
 <div id="updateCon">
   <div id="updateNutritionalModal" #updateNutritionalModal class="modal">
     <div class="modal-content">
-      <form (ngSubmit)="updateNutritional()">
+      <form>
         <legend class="legend1">
           Nutritional Status, Feeding and Micronutrient Supplementation Record
           of PreSchool Children
