--- a/src/app/home/profile-table/profile-table.component.html
+++ b/src/app/home/profile-table/profile-table.component.html
@@ -6,7 +6,7 @@
 <div id="updateCon">
   <div id="updateChildModal" #updateChildModal class="modal">
     <div class="modal-content">
-      <form (ngSubmit)="updateChild()">
+      <form>
         <legend class="legend1">Children Profile</legend>
         <div>
           <label for="firstName">First Name:</label>
