--- a/src/app/home/quarterly-table/quarterly-table.component.html
+++ b/src/app/home/quarterly-table/quarterly-table.component.html
@@ -6,7 +6,7 @@
 <div id="updateCon">
   <div id="updateQuarterlyModal" #updateQuarterlyModal class="modal">
     <div class="modal-content">
-      <form (ngSubmit)="updateQuarterly()">
+      <form>
         <legend class="legend1">
           Quarterly Record of Weight and Weight Status 24-59 Months
           Pre-Schoolers
