--- a/src/app/home/monthly-weight-records-table/monthly-weight-records-table.component.html
+++ b/src/app/home/monthly-weight-records-table/monthly-weight-records-table.component.html
@@ -6,41 +6,11 @@
 <div id="updateCon">
   <div id="updateMonthlyWeightModal" #updateMonthlyWeightModal class="modal">
     <div class="modal-content">
-      <form (ngSubmit)="updateMonthlyWeight()">
+      <form>
         <legend>
           Monthly Records of Weight and Weight Status Underweight and Severely
           Underweight Cases
         </legend>
-        <div>
-          <label for="birthday">Birthday:</label>
-          <input
-            type="date"
-            id="birthday"
-            name="birthday"
-            [(ngModel)]="monthlyWeightRecordsData.birthday"
-            required
-          />
-        </div>
-        <div>
-          <label for="birthday">Birthday:</label>
-          <input
-            type="date"
-            id="birthday"
-            name="birthday"
-            [(ngModel)]="monthlyWeightRecordsData.birthday"
-            required
-          />
-        </div>
-        <div>
-          <label for="ageInMonths">Age in Month:</label>
-          <input
-            type="text"
-            id="ageInMonths"
-            name="ageInMonths"
-            [(ngModel)]="monthlyWeightRecordsData.ageInMonths"
-            required
-          />
-        </div>
         <div>
           <label for="weight">Weight (kgs):</label>
           <input
@@ -74,59 +44,6 @@
             [(ngModel)]="monthlyWeightRecordsData.dateOfWeighing"
             required
           />
-        </div>
-
-        <div>
-          <label for="barangay">Barangay:</label>
-          <select
-            id="barangay"
-            name="barangay"
-            [(ngModel)]="monthlyWeightRecordsData.barangay"
-            required
-          >
-            <option value="ABUNG">ABUNG</option>
-            <option value="BALAGBAG">BALAGBAG</option>
-            <option value="BARUALTE">BARUALTE</option>
-            <option value="BATAAN">BATAAN</option>
-            <option value="BUHAY NA SAPA">BUHAY NA SAPA</option>
-            <option value="BULSA">BULSA</option>
-            <option value="CALICANTO">CALICANTO</option>
-            <option value="CALITCALIT">CALITCALIT</option>
-            <option value="CALUBCUB 1">CALUBCUB 1</option>
-            <option value="CALUBCUB 2">CALUBCUB 2</option>
-            <option value="CATMON">CATMON</option>
-            <option value="COLOCONTO">COLOCONTO</option>
-            <option value="ESCRIBANO">ESCRIBANO</option>
-            <option value="HUGOM">HUGOM</option>
-            <option value="IMELDA (TUBOG)">IMELDA (TUBOG)</option>
-            <option value="JANAOJANAO">JANAOJANAO</option>
-            <option value="LAIYA-IBABAO">LAIYA-IBABAO</option>
-            <option value="LAIYA-APLAYA">LAIYA-APLAYA</option>
-            <option value="LIBATO">LIBATO</option>
-            <option value="LIPAHAN">LIPAHAN</option>
-            <option value="MABALANOY">MABALANOY</option>
-            <option value="NAGSAULAY">NAGSAULAY</option>
-            <option value="MARAYKIT">MARAYKIT</option>
-            <option value="MUZON">MUZON</option>
-            <option value="PALAHANAN 1">PALAHANAN 1</option>
-            <option value="PALAHANAN 2">PALAHANAN 2</option>
-            <option value="PALINGOWAK">PALINGOWAK</option>
-            <option value="PINAGBAYANAN">PINAGBAYANAN</option>
-            <option value="POBLACION">POBLACION</option>
-            <option value="POCTOL">POCTOL</option>
-            <option value="PULANGBATO">PULANGBATO</option>
-            <option value="PUTINGBUHANGIN">PUTINGBUHANGIN</option>
-            <option value="QUIPOT">QUIPOT</option>
-            <option value="SAMPIRO">SAMPIRO</option>
-            <option value="SAPANGAN">SAPANGAN</option>
-            <option value="SICO 1">SICO 1</option>
-            <option value="SICO 2">SICO 2</option>
-            <option value="SUBUKIN">SUBUKIN</option>
-            <option value="TALAHIBAN 1">TALAHIBAN 1</option>
-            <option value="TALAHIBAN 2">TALAHIBAN 2</option>
-            <option value="TICALAN">TICALAN</option>
-            <option value="TIPAZ">TIPAZ</option>
-          </select>
         </div>
         <div>
           <label for="Date">Date:</label>
