--- a/src/app/home/baseline-weight/baseline-weight.component.html
+++ b/src/app/home/baseline-weight/baseline-weight.component.html
@@ -33,6 +33,7 @@
           id="birthday"
           name="birthday"
           [(ngModel)]="baselineData.birthday"
+          (ngModelChange)="onBirthdayChange()"
           required
         />
       </div>
