--- a/src/app/home/nutritional-table/nutritional-table.component.html
+++ b/src/app/home/nutritional-table/nutritional-table.component.html
@@ -213,7 +213,7 @@
         <button class="close" (click)="closeUpdateNutritionalModal()">
           Cancel
         </button>
-  
+
         <button class="btn btn-primary" (click)="updateNutritional()">
           Update Child
         </button>
@@ -318,6 +318,10 @@
     </select>
 
     <button (click)="clearFilters()">Clear_Filters</button>
+
+    <button (click)="downloadChildData()">
+      <i class="fa fa-download"></i>Download
+    </button>
   </div>
 </fieldset>
 
