--- a/src/app/home/userlist/userlist.component.html
+++ b/src/app/home/userlist/userlist.component.html
@@ -22,7 +22,7 @@
   <div>
     <div class="userList">
       <fieldset id="userRecords">
-        <label class="legend1">Create User</label>
+        <label class="legend1">BHW User List</label>
         <table>
           <thead>
             <tr>
