--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -10,7 +10,7 @@
     <div class="image-container">
       <form (submit)="login()">
         <div>
-          <label for="username">Username:</label>
+          <label for="username">Username or Email:</label>
           <input
             type="text"
             id="username"
