--- a/src/app/home/monthly-records-infant/monthly-records-infant.component.html
+++ b/src/app/home/monthly-records-infant/monthly-records-infant.component.html
@@ -221,6 +221,10 @@
     </select>
 
     <button (click)="clearFilters()">Clear_Filters</button>
+
+    <button (click)="downloadChildData()">
+      <i class="fa fa-download"></i>Download
+    </button>
   </div>
 </fieldset>
 <fieldset>
