--- a/src/app/home/profile-table/profile-table.component.html
+++ b/src/app/home/profile-table/profile-table.component.html
@@ -264,6 +264,10 @@
     />
 
     <button (click)="clearFilters()">Clear_Filters</button>
+
+    <button (click)="downloadChildData()">
+      <i class="fa fa-download"></i>Download
+    </button>
   </div>
 </fieldset>
 
