--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,23 +1,16 @@
 <div class="chart-grid">
-  <div class="chart-container">
-    <canvas id="barGraph"></canvas>
-  </div>
+  <div class="left">
+    <div class="chart-container">
+      <canvas id="barGraph"></canvas>
+    </div>
 
-  <div class="chart-container1">
-    <canvas id="lineGraph"></canvas>
+    <div class="chart-container1">
+      <canvas id="barGraphAge"></canvas>
+    </div>
   </div>
-
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Number of Girls and Boys in San Juan, Batangas</h5>
-      <div class="cardbody">
-        <p class="card-text">
-          <i class="fa fa-female"></i> Girls: {{ girlsCount }}
-        </p>
-        <p class="card-text">
-          <i class="fa fa-male"></i> Boys: {{ boysCount }}
-        </p>
-      </div>
+  <div class="right">
+    <div class="chart-container1">
+      <canvas id="genderChart"></canvas>
     </div>
   </div>
 </div>
