--- a/src/app/home/bmicalculator/bmicalculator.component.html
+++ b/src/app/home/bmicalculator/bmicalculator.component.html
@@ -108,19 +108,11 @@
     </div>
     <div>
       <label for="weight" class="label">Weight (kg):</label>
-      <input
-        type="number"
-        id="weight"
-        [(ngModel)]="bmiRecordData.weight"
-      />
+      <input type="number" id="weight" [(ngModel)]="bmiRecordData.weight" />
     </div>
     <div>
       <label for="height" class="label">Height (cm):</label>
-      <input
-        type="number"
-        id="height"
-        [(ngModel)]="bmiRecordData.height"
-      />
+      <input type="number" id="height" [(ngModel)]="bmiRecordData.height" />
     </div>
     <div>
       <label for="age" class="label">Age (5 and below):</label>
