--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -4,6 +4,10 @@
       <canvas id="barGraph"></canvas>
     </div>
 
+    <div class="chart-container">
+      <canvas id="barGraphHeight"></canvas>
+    </div>
+
     <div class="chart-container1">
       <canvas id="barGraphAge"></canvas>
     </div>
@@ -11,6 +15,9 @@
   <div class="right">
     <div class="chart-container1">
       <canvas id="genderChart"></canvas>
+    </div>
+    <div class="chart-container1">
+      <canvas id="barGraphWH"></canvas>
     </div>
   </div>
 </div>
