--- a/src/app/home/dashboard/dashboard.component.css
+++ b/src/app/home/dashboard/dashboard.component.css
@@ -23,7 +23,7 @@ canvas {
   width: 80%;
   max-width: 100%;
   height: auto;
-  background-color: #ccc;
+  background-color: #ffffff;
   border-radius: 5px;
 }
 
