--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,42 +1,37 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>This Was My Login</title>
-  </head>
-  <body>
-    <div class="title">
-      <h1>Municipality Of San Juan, Batangas</h1>
-    </div>
-    <div class="image-container">
-      <form (submit)="login()">
-        <div>
-          <label for="username">Username or Email:</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            [(ngModel)]="model.username"
-            required
-          />
-        </div>
+<body>
+  <div class="title">
+    <h1>Municipality Of San Juan, Batangas</h1>
+  </div>
+  <div class="image-container">
+    <form (submit)="login()">
+      <div>
+        <label for="username">Username or Email:</label>
+        <input
+          type="text"
+          id="username"
+          name="username"
+          [(ngModel)]="model.username"
+          required
+        />
+      </div>
 
-        <div>
-          <label for="password">Password:</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            [(ngModel)]="model.password"
-            required
-          />
-        </div>
+      <div>
+        <label for="password">Password:</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          [(ngModel)]="model.password"
+          required
+        />
+      </div>
 
-        <div class="Login">
-          <div style="text-align: center">
-            <button type="submit">Login</button>
-          </div>
+      <div class="Login">
+        <div style="text-align: center">
+          <button type="submit">Login</button>
         </div>
-      </form>
-    </div>
-  </body>
-</html>
+      </div>
+    </form>
+  </div>
+  <div class="background-image"></div>
+</body>
