--- a/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.css
+++ b/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.css
@@ -74,3 +74,27 @@ tr:nth-child(odd) {
   background-color: #f9f9f9;
   font-size: 5px;
 }
+
+
+
+/* dinagdag ko dyann sa modal */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+
+}
