--- a/src/app/home/nutritional-status/nutritional-status.component.html
+++ b/src/app/home/nutritional-status/nutritional-status.component.html
@@ -154,6 +154,8 @@
           id="weight"
           name="weight"
           [(ngModel)]="nutritionalData.weight"
+          (ngModelChange)="onWeightForAgeChange()"
+          required
         />
       </div>
       <div>
@@ -171,16 +173,13 @@
         </div>
         <div>
           <label for="weightForAge">Weight for Age:</label>
-          <select
+          <input
+            type="text"
             id="weightForAge"
             name="weightForAge"
             [(ngModel)]="nutritionalData.weightForAge"
-          >
-            <option value="SUW">SUW (Severely Underweight)</option>
-            <option value="UW">UW (Underweight)</option>
-            <option value="N">N (Normal)</option>
-            <option value="OW">OW (Overweight)</option>
-          </select>
+            required
+          />
         </div>
         <div>
           <label for="heightForAge">Height for Age:</label>
